# QuantOMA

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: data_sources.yaml  experiments.yaml  feature_sets.yaml  gold_model.yaml  llm_messages.yaml  strategies.yaml
scripts/: audit_gold_long_history_readiness.py  audit_gold_news_events.py  audit_gold_pipeline.py  backtest_gold_model.py  backtest_gold_position_model.py  build_etf_qlib_provider.py  build_gold_features.py  build_gold_qlib_provider.py  build_qlib_alpha158_features.py  check_data_coverage.py  compare_benchmarks.py  diagnose_alpha158_features.py  diagnose_rule_annual_performance.py  diagnose_rule_subperiod_performance.py  diagnose_sample_attrition.py  evaluate_gold_model_vs_buy_hold.py  evaluate_rule_baselines.py  fetch_a_share_data.py  fetch_gold_data.py  fetch_gold_local_series.py  fetch_gold_news.py  fetch_gold_polymarket.py  inspect_qlib_provider.py  predict_gold_live_signal.py  process_gold_news_events.py  run_gold_layered_strategy.py  run_gold_regime_diagnostics.py  run_gold_strategy_sensitivity.py  run_phase11_alpha158_verification.py  run_phase1_verification.py  run_rule_baselines.py  run_rule_parameter_sensitivity.py  run_transaction_cost_sensitivity.py  summarize_rule_robustness.py  train_gold_model.py  train_gold_position_model.py
tests/: test_alpha158_diagnostics.py  test_alpha_style_fallback.py  test_backtest_engine.py  test_efinance_data.py  test_feature_availability.py  test_fetch_a_share_data.py  test_gold_data_fetch_modules.py  test_gold_features_model.py  test_gold_layered_strategy.py  (+14 more)
(+110 files in other folders)
